style(notification): fix no wrapping log texts like urls

--- a/static/themes/default/theme.toolbar.css
+++ b/static/themes/default/theme.toolbar.css
@@ -408,6 +408,8 @@
 }
 
 .notification-body {
+  word-break: break-word;
+
   .notification-body-title {
     font-weight: 600;
   }
